--- a/uploader/dropzone.css
+++ b/uploader/dropzone.css
@@ -175,7 +175,8 @@
 
 .dropzone {
   min-height: 150px;
-  border: 2px solid rgba(0, 0, 0, 0.3);
+  border: 2px dashed rgba(255, 0, 0, 0.5);
+  border-radius: 1.5em;
   background: white;
   padding: 20px 20px; }
   .dropzone.dz-clickable {
